--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/nlog.config
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/nlog.config
@@ -4,16 +4,16 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Warn"
-      internalLogFile="c:\UdfsNext\SportLevel\internal-nlog.txt">
+      internalLogFile="c:\UdfsNext\SportLevel\logs\internal-nlog.txt">
 
 	<variable name="project" value="UfdsNext.Provider.SportLevel" />
-	<variable name="logsdir" value="c:\UdfsNext\SportLevel" />
-	<variable name="address" value="udp://localhost:9500" />
+	<variable name="fileDestination" value="c:\UdfsNext\SportLevel" />
+	<variable name="udpDestination" value="udp://localhost:9500" />
 
 	<targets async="true">
 
-		<target name="jsonFile" xsi:type="File" encoding="utf-8"
-            fileName="${var:logsdir}/${date:format=yyyy-MM-dd}.${level}.log"
+		<target name="fileTarget" xsi:type="File" encoding="utf-8"
+            fileName="${var:fileDestination}/logs/${date:format=yyyy-MM-dd}.${level}.log"
             archiveFileName="${var:logsdir}/{#}.log"
             archiveNumbering="Date"
             archiveDateFormat="yyyy-MM-dd_HH"
@@ -33,8 +33,8 @@
 			</layout>
 		</target>
 
-		<target name="networkLog" xsi:type="Network" encoding="utf-8"
-            address="${var:address}"
+		<target name="udpLog" xsi:type="Network" encoding="utf-8"
+            address="${var:udpDestination}"
             newLine="true">
 			<layout xsi:type="JsonLayout"  maxRecursionLimit="2" includeAllProperties="true" >
 				<attribute name="project" layout="${var:project}" />
@@ -50,8 +50,8 @@
 	</targets>
 
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="networkLog"  />
-		<logger name="*" minlevel="Trace" writeTo="jsonFile" />
+		<logger name="*" minlevel="Trace" writeTo="udpTarget"  />
+		<logger name="*" minlevel="Trace" writeTo="fileTarget" />
 	</rules>
 
 </nlog>
