--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Adapter.Transmitter/LigaStavok.UdfsNext.Provider.SportLevel.Adapter.Transmitter.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Adapter.Transmitter/LigaStavok.UdfsNext.Provider.SportLevel.Adapter.Transmitter.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Akka.DI.SimpleInjector" Version="1.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
+    <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="SimpleInjector" Version="4.7.1" />
     <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
     <PackageReference Include="Udfs.Transmitter" Version="20.7.17-76" />
