--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host.Console/LigaStavok.UdfsNext.Provider.SportLevel.Host.Console.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host.Console/LigaStavok.UdfsNext.Provider.SportLevel.Host.Console.csproj
@@ -9,6 +9,10 @@
 	</PropertyGroup>
 
   <ItemGroup>
+    <None Remove="nlog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
   </ItemGroup>
 
