--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces.csproj
@@ -6,9 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LigaStavok.Threading\LigaStavok.Threading.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Primitives\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Primitives.csproj" />
+    <ProjectReference Include="..\LigaStavok.WebSocket\LigaStavok.Websocket.csproj" />
   </ItemGroup>
 
 </Project>
