--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>LigaStavok.UdfsNext.Provider.BetRadar</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
+  </ItemGroup>
+
 </Project>
