--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Host.Console/LigaStavok.UdfsNext.Provider.BetRadar.Host.Console.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Host.Console/LigaStavok.UdfsNext.Provider.BetRadar.Host.Console.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.6" />
+  </ItemGroup>
+
 </Project>
