--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Orleans/LigaStavok.UdfsNext.Provider.BetRadar.Orleans.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Orleans/LigaStavok.UdfsNext.Provider.BetRadar.Orleans.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Providers.Orleans\LigaStavok.UdfsNext.Providers.Orleans.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Providers.Runtime.Interfaces\LigaStavok.UdfsNext.Providers.Runtime.Interfaces.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="StartupTasks\" />
+  </ItemGroup>
+
 </Project>
