--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.RunTime/LigaStavok.UdfsNext.Provider.BetRadar.RunTime.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.RunTime/LigaStavok.UdfsNext.Provider.BetRadar.RunTime.csproj
@@ -8,7 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="Sportradar.OddsFeed.SDKCore" Version="1.8.0" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Dumps\LigaStavok.UdfsNext.Dumps.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Providers.Runtime.Interfaces\LigaStavok.UdfsNext.Providers.Runtime.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
