--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>LigaStavok.UdfsNext.Provider.BetRadar</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="WebSocket\Messages\Data\" />
+  </ItemGroup>
+
 </Project>
