--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Interfaces.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\LigaStavok.Threading\LigaStavok.Threading.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Primitives\LigaStavok.UdfsNext.Provider.SportLevel.Runtime.Primitives.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Providers.Runtime.Interfaces\LigaStavok.UdfsNext.Providers.Runtime.Interfaces.csproj" />
     <ProjectReference Include="..\LigaStavok.WebSocket\LigaStavok.Websocket.csproj" />
   </ItemGroup>
 
