--- a/Sources/LigaStavok.UdfsNext.Providers.Runtime.Interfaces/LigaStavok.UdfsNext.Providers.Runtime.Interfaces.csproj
+++ b/Sources/LigaStavok.UdfsNext.Providers.Runtime.Interfaces/LigaStavok.UdfsNext.Providers.Runtime.Interfaces.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
+  </ItemGroup>
 
 </Project>
