--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LigaStavok.UdfsNext.Primitives\LigaStavok.UdfsNext.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives\LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Providers.Runtime.Interfaces\LigaStavok.UdfsNext.Providers.Runtime.Interfaces.csproj" />
