--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives/LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
