--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.RunTime/LigaStavok.UdfsNext.Provider.BetRadar.RunTime.csproj
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.RunTime/LigaStavok.UdfsNext.Provider.BetRadar.RunTime.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.6" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="Sportradar.OddsFeed.SDKCore" Version="1.8.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.1" />
@@ -15,6 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LigaStavok.UdfsNext.Dumps\LigaStavok.UdfsNext.Dumps.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces\LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Interfaces.csproj" />
+    <ProjectReference Include="..\LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives\LigaStavok.UdfsNext.Provider.BetRadar.Runtime.Primitives.csproj" />
     <ProjectReference Include="..\LigaStavok.UdfsNext.Providers.Runtime.Interfaces\LigaStavok.UdfsNext.Providers.Runtime.Interfaces.csproj" />
   </ItemGroup>
 
