--- a/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Host/appsettings.json
+++ b/Sources/LigaStavok.UdfsNext.Provider.BetRadar.Host/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Provider": {
-    "UserName": "firuza.hismatullina@ligastavok.ru",
-    "Password": "Liga2020",
-    "WebApiUrl": "stgapi.betradar.com",
+    "UserName": "",
+    "Password": "",
+    "WebApiUrl": "",
     "MetaRefreshInterval": "00:01:00",
     "RabbitMQ": {
       "Host": "rabbitmq-01.dev.oscaryard.local",
