--- a/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/appsettings.json
+++ b/Sources/LigaStavok.UdfsNext.Provider.SportLevel.Host/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Provider": {
-    "UserName": "firuza.hismatullina@ligastavok.ru",
-    "Password": "Liga2020",
-    "WebSocketUrl": "wss://partner.sportlevel.com/highway",
-    "WebApiUrl": "https://partner.sportlevel.com",
+    "UserName": "",
+    "Password": "",
+    "WebSocketUrl": "",
+    "WebApiUrl": "",
     "MetaRefreshInterval": "00:01:00",
     "Margin": 0.07
   },
